--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "poicc-components": "^1.0.2",
     "@commitlint/cli": "17.0.2",
     "@commitlint/config-conventional": "17.0.2",
+    "@vitejs/plugin-vue": "^4.2.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "ali-oss": "^6.17.0",
     "autoprefixer": "^10.4.2",
@@ -34,6 +34,7 @@
     "file-saver": "^2.0.5",
     "gsap": "^3.9.1",
     "md5": "^2.3.0",
+    "poicc-components": "^1.0.2",
     "prettier": "^2.8.1",
     "terser": "^5.16.1",
     "vee-validate": "^4.7.4",
