--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@commitlint/cli": "17.0.2",
     "@commitlint/config-conventional": "17.0.2",
-    "@vitejs/plugin-vue": "^4.2.1",
+    "@vitejs/plugin-vue": "^3.2.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "ali-oss": "^6.17.0",
     "autoprefixer": "^10.4.2",
@@ -41,7 +41,9 @@
     "vue": "^3.2.41",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "tailwindcss": "^3.0.23",
+    "postcss": "^8.4.8"
   },
   "devDependencies": {
     "c8": "^7.12.0",
