--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0",
     "tailwindcss": "^3.0.23",
-    "postcss": "^8.4.8"
+    "postcss": "^8.4.8",
+    "@vueuse/core": "^9.6.0",
+    "@vueuse/shared": "^10.0.2"
   },
   "devDependencies": {
     "c8": "^7.12.0",
